--- a/128x64 OLED/README
+++ b/128x64 OLED/README
@@ -1,5 +1,9 @@
 The 128x64 OLED project uses, as the name states a 0.96-inch I2C OLED display with 128 x 64 pixels connected to a NTP clock.
 
+TODO:
+- The clock interface will be updated to only include hour and minute to lower battery consumption, and make space for larger text size.
+- The shell will be updated to minimize bezel thickness making space for broader viewing angles.
+
 INDEX:
 - Code: Contains the running code.
 - Design: Contains the sliced 3D file together with photos of the finished construction.
