--- a/1. 128x64 OLED/README
+++ b/1. 128x64 OLED/README
@@ -1,4 +1,4 @@
-The 128x64 OLED project uses, as the name states a 0.96-inch I2C OLED display with 128 x 64 pixels connected to a NTP clock through 2.4GHz WIFI.
+S.A.M.1 uses a 0.96-inch I2C OLED display with 128 x 64 pixels connected to a NTP clock through 2.4GHz WIFI.
 
 TODO:
 - The clock interface will be updated to only include hour and minute to lower battery consumption, and make space for larger text size.
